kubernetes/template/ingress/template.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: accident
  labels:
    app: accident
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accident
  template:
    metadata:
      labels:
        app: accident
    spec:
      containers:
        - name: accident
          image: username/accident:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment
  labels:
    app: assessment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assessment
  template:
    metadata:
      labels:
        app: assessment
    spec:
      containers:
        - name: assessment
          image: username/assessment:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: compensation
  labels:
    app: compensation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compensation
  template:
    metadata:
      labels:
        app: compensation
    spec:
      containers:
        - name: compensation
          image: username/compensation:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics
  labels:
    app: statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics
  template:
    metadata:
      labels:
        app: statistics
    spec:
      containers:
        - name: statistics
          image: ghcr.io/kyusook/egov-uengine/statistics:v1.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: ghcr.io/kyusook/egov-uengine/notification:v1.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: accident
  labels:
    app: accident
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: accident


---


apiVersion: v1
kind: Service
metadata:
  name: assessment
  labels:
    app: assessment
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: assessment


---


apiVersion: v1
kind: Service
metadata:
  name: compensation
  labels:
    app: compensation
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: compensation


---


apiVersion: v1
kind: Service
metadata:
  name: statistics
  labels:
    app: statistics
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: statistics


---


apiVersion: v1
kind: Service
metadata:
  name: notification
  labels:
    app: notification
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: notification
